; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/w1/masters/extr_ds2482.c_ds2482_send_cmd.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/w1/masters/extr_ds2482.c_ds2482_send_cmd.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ds2482_data = type { i32, i32 }

@DS2482_PTR_CODE_STATUS = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.ds2482_data*, i32)* @ds2482_send_cmd to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ds2482_send_cmd(%struct.ds2482_data* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.ds2482_data*, align 8
  %5 = alloca i32, align 4
  store %struct.ds2482_data* %0, %struct.ds2482_data** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load %struct.ds2482_data*, %struct.ds2482_data** %4, align 8
  %7 = getelementptr inbounds %struct.ds2482_data, %struct.ds2482_data* %6, i32 0, i32 1
  %8 = load i32, i32* %7, align 4
  %9 = load i32, i32* %5, align 4
  %10 = call i64 @i2c_smbus_write_byte(i32 %8, i32 %9)
  %11 = icmp slt i64 %10, 0
  br i1 %11, label %12, label %13

12:                                               ; preds = %2
  store i32 -1, i32* %3, align 4
  br label %17

13:                                               ; preds = %2
  %14 = load i32, i32* @DS2482_PTR_CODE_STATUS, align 4
  %15 = load %struct.ds2482_data*, %struct.ds2482_data** %4, align 8
  %16 = getelementptr inbounds %struct.ds2482_data, %struct.ds2482_data* %15, i32 0, i32 0
  store i32 %14, i32* %16, align 4
  store i32 0, i32* %3, align 4
  br label %17

17:                                               ; preds = %13, %12
  %18 = load i32, i32* %3, align 4
  ret i32 %18
}

declare dso_local i64 @i2c_smbus_write_byte(i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
